feat: 로또 사이트 로직 개선 및 주요 버전 업데이트
- Gradle 및 Spring Boot 버전 업데이트 (8.14.1, 4.0.1)
- Java 버전 21로 스펙 상향
- Playwright, SpringDoc 등 의존성 최신화
- LottoConstants, LottoService 리팩터링으로 코드 단순화 및 가독성 개선
- HTML 포맷 변경 (알림 메시지 개선)